--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -6,6 +6,8 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v4
+      - name: Install
+        run: npm --prefix client ci
       - name: Build
         run: npm --prefix client run build
       - name: Deploy
